version/0.26/_sources/api/solver/_autosummary/settings/real_pole_series.rst.txt
:orphan:

.. _real_pole_series:

real_pole_series
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.real_pole_series.real_pole_series
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`real_pole_series_child <real_pole_series_child>`


.. rubric:: Included in:

=============================   =======================

Parent                                          Summary

=============================   =======================
:ref:`momentum <momentum>`          Help not available.

:ref:`momentum <momentum_1>`        Help not available.

:ref:`momentum <momentum_2>`        Help not available.

:ref:`momentum <momentum_3>`        Help not available.

:ref:`momentum <momentum_6>`        Help not available.

:ref:`momentum <momentum_8>`        Help not available.

:ref:`momentum <momentum_9>`        Help not available.

:ref:`momentum <momentum_10>`       Help not available.

=============================   =======================

