version/0.28/_sources/api/solver/_autosummary/settings/real_pole_series.rst.txt
:orphan:

.. _real_pole_series:

real_pole_series
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.real_pole_series
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`real_pole_series_child <real_pole_series_child>`


.. rubric:: Included in:

================================   ==========================================================

Parent                                                                                Summary

================================   ==========================================================
:ref:`momentum <momentum>`             Allows to change momentum model variables or settings.

:ref:`momentum_1 <momentum_1>`         Allows to change momentum model variables or settings.

:ref:`momentum_2 <momentum_2>`         Allows to change momentum model variables or settings.

:ref:`momentum_3 <momentum_3>`         Allows to change momentum model variables or settings.

:ref:`momentum_6 <momentum_6>`         Allows to change momentum model variables or settings.

:ref:`momentum_8 <momentum_8>`         Allows to change momentum model variables or settings.

:ref:`momentum_9 <momentum_9>`         Allows to change momentum model variables or settings.

:ref:`momentum_10 <momentum_10>`       Allows to change momentum model variables or settings.

================================   ==========================================================

